--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -38,25 +38,27 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+<nav class=”navbar navbar-expand-md navbar-dark fixed-top bg-dark”>
+<a class=”navbar-brand” href=”#”>MyTecBits.com</a>
+<button class=”navbar-toggler collapsed” type=”button” data-toggle=”collapse” data-target=”#navbar” aria-controls=”navbar” aria-expanded=”false” aria-label=”Toggle navigation”>
+<span class=”navbar-toggler-icon”></span>
+</button>
+<div id=”navbar” class=”navbar-collapse collapse”>
+<ul class=”navbar-nav mr-auto”>
+<li class=”nav-item active”><a class=”nav-link” href=”/Default.aspx”>Home</a></li>
+<li class=”nav-item”><a class=”nav-link” href=”#about”>About</a></li>
+<li class=”nav-item”><a class=”nav-link” href=”#contact”>Contact</a></li>
+<li class=”nav-item dropdown”>
+<a class=”nav-link dropdown-toggle” href=”#” data-toggle=”dropdown” aria-haspopup=”true” aria-expanded=”false” id=”dropdown04″>Dropdown <span class=”caret”></span></a>
+<div class=”dropdown-menu” aria-labelledby=”dropdown04″>
+<a class=”dropdown-item” href=”#”>Action</a>
+<a class=”dropdown-item” href=”#”>Another action</a>
+<a class=”dropdown-item” href=”#”>Something else here</a>
+</div>
+</li>
+</ul>
+</div>
+</nav>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
