--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -38,36 +38,46 @@
             </Scripts>
         </asp:ScriptManager>
 
-<nav class=”navbar navbar-expand-md navbar-dark fixed-top bg-dark”>
-<a class=”navbar-brand” href=”#”>MyTecBits.com</a>
-<button class=”navbar-toggler collapsed” type=”button” data-toggle=”collapse” data-target=”#navbar” aria-controls=”navbar” aria-expanded=”false” aria-label=”Toggle navigation”>
-<span class=”navbar-toggler-icon”></span>
-</button>
-<div id=”navbar” class=”navbar-collapse collapse”>
-<ul class=”navbar-nav mr-auto”>
-<li class=”nav-item active”><a class=”nav-link” href=”/Default.aspx”>Home</a></li>
-<li class=”nav-item”><a class=”nav-link” href=”#about”>About</a></li>
-<li class=”nav-item”><a class=”nav-link” href=”#contact”>Contact</a></li>
-<li class=”nav-item dropdown”>
-<a class=”nav-link dropdown-toggle” href=”#” data-toggle=”dropdown” aria-haspopup=”true” aria-expanded=”false” id=”dropdown04″>Dropdown <span class=”caret”></span></a>
-<div class=”dropdown-menu” aria-labelledby=”dropdown04″>
-<a class=”dropdown-item” href=”#”>Action</a>
-<a class=”dropdown-item” href=”#”>Another action</a>
-<a class=”dropdown-item” href=”#”>Something else here</a>
-</div>
-</li>
-</ul>
-</div>
-</nav>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar">abcd</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" runat="server" href="~/">ArtMagicWeb</a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a runat="server" href="~/">Home</a></li>
+                        <li><a runat="server" href="#">About Us</a></li>
+                        <li><a runat="server" href="#">Gallery</a></li>
+                        <li><a runat="server" href="#">Artists</a></li>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-facebook" viewBox="0 0 16 16">
+  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+</svg>
+                        
+                    </ul>
+                </div>
+                
+            </div>
+        </div>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                <div>
+
+                </div>
             </asp:ContentPlaceHolder>
-            <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
-            </footer>
         </div>
 
+        <%-- Footer --%>
+        <footer class="footer font-style-1 " style="padding-top: 15px; padding-bottom: -10px; background-color: #1E2329;">
+                <div class="container-fluid text-center">
+                    <p style="margin-top: 10px; color: #A2A2A2;" class="text-muted">COPYRIGHT © 2021 ArtMagicWeb88 | DESIGNED BY ArtMagicWeb88</p>
+                </div>
+        </footer>
     </form>
+    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
