--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -61,9 +61,11 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
-            </footer>
+        <footer class="footer font-style-1 " style="position: fixed;padding: 10px 10px 0px 10px; bottom: 0;width: 100%;height: 60px;  background-color: #1E2329;">
+                <div class="container-fluid text-center">
+                    <p style="margin-top: 10px; color: #A2A2A2;" class="text-muted">COPYRIGHT © 2021 ArtMagicWeb88 | DESIGNED BY ArtMagicWeb88</p>
+                </div>
+        </footer>
         </div>
 
     </form>
