--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -42,25 +42,22 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar">abcd</span>
+                        <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" runat="server" href="~/">ArtMagicWeb</a>
                 </div>
-                <div class="navbar-collapse collapse">
+                <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="#">About Us</a></li>
                         <li><a runat="server" href="#">Gallery</a></li>
                         <li><a runat="server" href="#">Artists</a></li>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-facebook" viewBox="0 0 16 16">
-  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-</svg>
+                        
                         
                     </ul>
-                </div>
-                
+                </div> 
             </div>
         </div>
         <div class="container body-content">
@@ -72,7 +69,7 @@
         </div>
 
         <%-- Footer --%>
-        <footer class="footer font-style-1 " style="padding-top: 15px; padding-bottom: -10px; background-color: #1E2329;">
+        <footer class="footer font-style-1 " style="position: fixed;padding: 10px 10px 0px 10px; bottom: 0;width: 100%;height: 60px;  background-color: #1E2329;">
                 <div class="container-fluid text-center">
                     <p style="margin-top: 10px; color: #A2A2A2;" class="text-muted">COPYRIGHT © 2021 ArtMagicWeb88 | DESIGNED BY ArtMagicWeb88</p>
                 </div>
