updated navbar, created insert product page but have file size problem havent resolve

--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -54,9 +54,10 @@
                         <li><a runat="server" href="#">About Us</a></li>
                         <li><a runat="server" href="#">Gallery</a></li>
                         <li><a runat="server" href="#">Artists</a></li>
-                        
+                        <li><a runat="server" href="#">Login</a></li>
                         
                     </ul>
+                    
                 </div> 
             </div>
         </div>
