--- a/ArtMagicWeb88/Content/artist.css
+++ b/ArtMagicWeb88/Content/artist.css
@@ -1,121 +1,110 @@
-﻿/*-----------------------------Master Css-----------------------------*/
-body {
-    margin: 0px;
-    font-family: Arial, sans-serif;
-    font-size: 14px !important;
+﻿@import 'https://fonts.googleapis.com/css?family=Montserrat|Open+Sans';
+
+.navbar-brand {
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase
 }
 
-p {
-    font-size: 14px;
+.navbar .nav {
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 1.2rem
 }
 
-.artContainer .btn {
-    height: 40px !important;
-    padding: 9px 15px !important;
-    margin-bottom: 15px !important;
-    border-radius: 5px !important;
+.navbar-inverse {
+    background-color: #003300
 }
 
-/*-----------------------------Artwork Css-----------------------------*/
-.container {
-    width: 100%;
-}
-
-.artContainer {
-    float: left;
-    width: 960px;
-    height: 220px !important;
-    padding: 10px;
-    margin: 15px 70px;
-    border: 1px solid grey;
-    box-shadow: 5px 10px 20px #9E9FA0;
-    border-radius: 15px;
-    /*background-color: aliceblue;*/
-}
-
-.artImg {
-    text-align: center;
-    width: 250px;
-    height: 180px;
-    margin: 10px;
-    float: left;
-    border-radius: 10px;
-    /*background-color: blanchedalmond;*/
-}
-
-    .artImg > img {
-        height: 180px;
-        border-radius: 10px;
+    .navbar-inverse .navbar-nav > .active > a:hover,
+    .navbar-inverse .navbar-nav > li > a:hover,
+    .navbar-inverse .navbar-nav > li > a:focus {
+        background-color: #002200
     }
 
-.artDetails {
-    float: left;
-    width: 540px;
-    height: fit-content;
-    margin: 10px;
-    /*background-color: aquamarine;*/
-}
-
-    .artDetails td {
-        padding: 0.48rem 0rem;
+    .navbar-inverse .navbar-nav > .active > a,
+    .navbar-inverse .navbar-nav > .open > a,
+    .navbar-inverse .navbar-nav > .open > a,
+    .navbar-inverse .navbar-nav > .open > a:hover,
+    .navbar-inverse .navbar-nav > .open > a,
+    .navbar-inverse .navbar-nav > .open > a:hover,
+    .navbar-inverse .navbar-nav > .open > a:focus {
+        background-color: #003300
     }
 
-.actionBtn {
-    display: grid;
-    float: right;
-    height: 155px;
-    margin: 23px 5px;
-    /*background-color: blanchedalmond;*/
+.dropdown-menu {
+    background-color: #006B00
 }
 
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    overflow: hidden;
-}
-
-    .modal .btn {
-        margin-top: 30px;
-        float: right !important;
+    .dropdown-menu > li > a:hover,
+    .dropdown-menu > li > a:focus {
+        background-color: #002200
     }
 
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 10% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+.navbar-inverse {
+    background-image: none;
 }
 
-/* The Close Button */
-.modal .close {
-    color: crimson !important;
-    font-size: 40px !important;
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+    background-image: none;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.navbar-inverse {
+    border-color: #003300
 }
 
-.addArtworkContainer > .btn {
-    width: 40px;
-    position: absolute;
-    top: 82px;
-    left: 600px;
-    padding: 8px 4px !important;
-    margin-bottom: 20px;
-    border-radius: 50px !important;
+    .navbar-inverse .navbar-brand {
+        color: #FFFFFF
+    }
+
+        .navbar-inverse .navbar-brand:hover {
+            color: #FFCC00
+        }
+
+    .navbar-inverse .navbar-nav > li > a {
+        color: #FFFFFF
+    }
+
+        .navbar-inverse .navbar-nav > li > a:hover,
+        .navbar-inverse .navbar-nav > li > a:focus {
+            color: #FFCC00
+        }
+
+    .navbar-inverse .navbar-nav > .active > a,
+    .navbar-inverse .navbar-nav > .open > a,
+    .navbar-inverse .navbar-nav > .open > a:hover,
+    .navbar-inverse .navbar-nav > .open > a:focus {
+        color: #FFCC00
+    }
+
+        .navbar-inverse .navbar-nav > .active > a:hover,
+        .navbar-inverse .navbar-nav > .active > a:focus {
+            color: #FFCC00
+        }
+
+.dropdown-menu > li > a {
+    color: #FFFFFF
 }
+
+    .dropdown-menu > li > a:hover,
+    .dropdown-menu > li > a:focus {
+        color: #FFCC00
+    }
+
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
+    border-top-color: #FFFFFF
+}
+
+.navbar-inverse .navbar-nav > .dropdown > a:hover .caret {
+    border-top-color: #FFFFFF
+}
+
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
+    border-bottom-color: #FFFFFF
+}
+
+.navbar-inverse .navbar-nav > .dropdown > a:hover .caret {
+    border-bottom-color: #FFFFFF
+}
+
