--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -46,13 +46,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">ArtMagicWeb</a>
+                    <a class="navbar-brand" runat="server" href="~/HomePage.aspx">ArtMagicWeb</a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="#">About Us</a></li>
-                        <li><a runat="server" href="#">Gallery</a></li>
+                        <li><a runat="server" href="~/HomePage.aspx">Home</a></li>
+                        <li><a runat="server" href="~/AboutUs">About Us</a></li>
+                        <li><a runat="server" href="~/ViewArts">Gallery</a></li>
                         <li><a runat="server" href="#">Artists</a></li>
                         <li><a runat="server" href="#">Login</a></li>
                         
