--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -46,7 +46,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/HomePage.aspx">ArtMagicWeb</a>
+                    <a class="navbar-brand" runat="server" href="~/HomePage.aspx"><asp:Image ID="Image1" runat="server" ImageUrl="~/img/logo.png" /></a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
