--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -54,8 +54,8 @@
                         <li><a runat="server" href="#">About Us</a></li>
                         <li><a runat="server" href="#">Gallery</a></li>
                         <li><a runat="server" href="#">Artists</a></li>
-                        <li><a runat="server" href="#">Login</a></li>
-                        
+                        <li><a runat="server" href="ArtLoginPage.aspx">Artist Login</a></li>
+                        <li><a runat="server" href="CustomerLoginPage.aspx">Customer Login</a></li>
                     </ul>
                     
                 </div> 
@@ -67,8 +67,10 @@
 
                 </div>
             </asp:ContentPlaceHolder>
+            
+            <%-- Footer --%>
         <footer class="footer font-style-1 " style="position: fixed;padding: 10px 10px 0px 10px; bottom: 0;width: 100%;height: 60px;  background-color: #1E2329;">
-                <div class="container-fluid text-center">
+                <div class="text-center">
                     <p style="margin-top: 10px; color: #A2A2A2;" class="text-muted">COPYRIGHT © 2021 ArtMagicWeb88 | DESIGNED BY ArtMagicWeb88</p>
                 </div>
         </footer>
@@ -83,4 +85,5 @@
     </form>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
