--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -46,13 +46,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/"><img src="img/ArtMagic logo.jpeg"/></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="#">About Us</a></li>
+                        <li><a runat="server" href="#">Gallery</a></li>
+                        <li><a runat="server" href="#">Artists</a></li>
+                        <li><a runat="server" href="ArtLoginPage.aspx">Artist Login</a></li>
+                        <li><a runat="server" href="CustomerLoginPage.aspx">Customer Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -60,12 +63,16 @@
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
-            <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
-            </footer>
+            
+            <%-- Footer --%>
+        <footer class="footer font-style-1 " style="position: fixed;padding: 10px 10px 0px 10px; bottom: 0;width: 100%;height: 60px;  background-color: #1E2329;">
+                <div class="text-center">
+                    <p style="margin-top: 10px; color: #A2A2A2;" class="text-muted">COPYRIGHT © 2021 ArtMagicWeb88 | DESIGNED BY ArtMagicWeb88</p>
+                </div>
+        </footer>
         </div>
 
     </form>
 </body>
+
 </html>
