--- a/ArtMagicWeb88/Site.Master
+++ b/ArtMagicWeb88/Site.Master
@@ -51,10 +51,9 @@
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/HomePage.aspx">Home</a></li>
-                        <li><a runat="server" href="~/AboutUs">About Us</a></li>
-                        <li><a runat="server" href="~/ViewArts">Gallery</a></li>
-                        <li><a runat="server" href="#">Artists</a></li>
-                        <li><a runat="server" href="#">Login</a></li>
+                        <li><a runat="server" href="~/AboutUs.aspx">About Us</a></li>
+                        <li><a runat="server" href="~/ArtLoginPage.aspx">Artist Login</a></li>
+                        <li><a runat="server" href="~/CustomerLoginPage.aspx">Customer Login</a></li>
                         
                     </ul>
                     
