--- a/ArtMagicWeb88/login.Master
+++ b/ArtMagicWeb88/login.Master
@@ -53,7 +53,8 @@
                         
                         <li><a runat="server" href="~/ViewArts.aspx">Gallery</a></li>
                         <li><a runat="server" href="~/cart.aspx">Add To Cart</a></li>
-                        <li><a runat="server" href="~/WishList.aspx">WishList</a></li>
+
+                        <li><asp:Label ID="lblWishListNum" CssClass="badge badge-danger badge-position" Text="0" runat="server"></asp:Label><a runat="server" href="~/WishList.aspx">WishList</a></li>
                         <li><a runat="server" href="#">Edit Profile</a></li>
                         <li><asp:Button ID="Logout" runat="server" Text="Logout" OnClick="Logout_Click" style="background-color:white; margin-top:13px;"    ForeColor="Black" /></li>
                     </ul>
